Start Menu Script
remade a script I already had and improved upon it. It has some placeholders that need to be replaced once the control and credits screen has been made

--- a/Assets/UI Toolkit/StyleSheets/Menus.uss
+++ b/Assets/UI Toolkit/StyleSheets/Menus.uss
@@ -38,3 +38,10 @@
     transition-duration: 0.8s;
     transition-delay: 0.2s;
 }
+
+.button:focus {
+    scale: 1.2 1.2;
+    background-color: rgb(226, 87, 202);
+    transition-duration: 0.8s;
+    transition-delay: 0.2s;
+}
