--- a/Assets/UI Toolkit/VisualTrees/InGame/CaughtScreen.uxml
+++ b/Assets/UI Toolkit/VisualTrees/InGame/CaughtScreen.uxml
@@ -2,7 +2,7 @@
     <Style src="project://database/Assets/UI%20Toolkit/StyleSheets/Menus.uss?fileID=7433441132597879392&amp;guid=8f6c888a201dfee4ab578606f6caed98&amp;type=3#Menus" />
     <ui:VisualElement name="Container" class="base-container" style="flex-grow: 1; background-color: rgb(115, 24, 19);">
         <ui:Label text="You Were Caught" name="Title" class="title" />
-        <ui:Label text="and will be take to be part of the puppet show!" name="Text" class="text" />
+        <ui:Label text="and will be taken to be part of the puppet show!" name="Text" class="text" />
         <ui:VisualElement name="ButtonContainer" class="button-container" style="flex-grow: 1;">
             <ui:Button text="Next Day" name="NextDayButton" class="button" />
         </ui:VisualElement>
