--- a/Assets/UI Toolkit/VisualTrees/InGame/WinScreen.uxml
+++ b/Assets/UI Toolkit/VisualTrees/InGame/WinScreen.uxml
@@ -2,8 +2,7 @@
     <Style src="project://database/Assets/UI%20Toolkit/StyleSheets/Menus.uss?fileID=7433441132597879392&amp;guid=8f6c888a201dfee4ab578606f6caed98&amp;type=3#Menus" />
     <ui:VisualElement name="Container" class="base-container" style="flex-grow: 1; background-color: rgb(19, 115, 24);">
         <ui:Label text="You Won!" name="Title" class="title" />
-        <ui:Label text="Rounds: " name="Rounds" class="text" />
-        <ui:Label text="Time:" name="Time" class="text" />
+        <ui:Label text="Time:" name="Time" class="text" style="margin-right: 0; margin-left: 0; margin-bottom: 0; margin-top: 100px;" />
         <ui:VisualElement name="ButtonContainer" class="button-container" style="flex-grow: 1;">
             <ui:Button text="Play Again" name="PlayAgainButton" class="button" />
             <ui:Button text="Main Menu" name="MainMenuButton" class="button" />
