Button Art Implementation
implemented some art for buttons on the caught and win screen.
Also made some adjustments to the start menu buttons

--- a/Assets/UI Toolkit/StyleSheets/Menus.uss
+++ b/Assets/UI Toolkit/StyleSheets/Menus.uss
@@ -39,6 +39,7 @@
     border-bottom-left-radius: 20px;
     -unity-font-style: normal;
     -unity-text-align: middle-center;
+    border-left-width: 0;
 }
 
 .button:hover {
