--- a/Assets/UI Toolkit/StyleSheets/Menus.uss
+++ b/Assets/UI Toolkit/StyleSheets/Menus.uss
@@ -3,7 +3,7 @@
     height: 100%;
     align-items: center;
     align-self: center;
-    background-color: rgb(81, 19, 115);
+    background-color: rgba(81, 19, 115, 0);
 }
 
 .button-container {
@@ -30,28 +30,39 @@
 .button {
     width: 350px;
     height: 175px;
-    margin-bottom: 100px;
+    margin-bottom: 0;
     margin-top: 0;
     font-size: 60px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     -unity-font-style: normal;
     -unity-text-align: middle-center;
     border-left-width: 0;
+    background-color: rgba(0, 0, 0, 0);
+    transition-duration: 0.8s;
+    transition-delay: 0.2s;
 }
 
 .button:hover {
     scale: 1.2 1.2;
-    background-color: rgb(226, 87, 202);
+    background-color: rgba(226, 87, 202, 0);
     transition-duration: 0.8s;
     transition-delay: 0.2s;
 }
 
 .button:focus {
     scale: 1.2 1.2;
-    background-color: rgb(226, 87, 202);
+    background-color: rgba(226, 87, 202, 0);
     transition-duration: 0.8s;
     transition-delay: 0.2s;
+}
+
+.base-container {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    align-self: center;
+    background-color: rgb(81, 19, 115);
 }
