implement credits & controls art
implemented the temporary art for the credits and controls screen

--- a/Assets/UI Toolkit/StyleSheets/Menus.uss
+++ b/Assets/UI Toolkit/StyleSheets/Menus.uss
@@ -4,6 +4,7 @@
     align-items: center;
     align-self: center;
     background-color: rgba(81, 19, 115, 0);
+    overflow: hidden;
 }
 
 .button-container {
