--- a/Assets/UI Toolkit/VisualTrees/MainMenu/ControlsScreen.uxml
+++ b/Assets/UI Toolkit/VisualTrees/MainMenu/ControlsScreen.uxml
@@ -1,10 +1,10 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/StyleSheets/Menus.uss?fileID=7433441132597879392&amp;guid=8f6c888a201dfee4ab578606f6caed98&amp;type=3#Menus" />
-    <ui:VisualElement name="Container" class="base-container" style="flex-grow: 1;">
-        <ui:Label text="Controls" name="Title" class="title" />
-        <ui:Label text="    [W] to jump&#10;    [A] to move left&#10;    [S] to duck&#10;    [D] to move right&#10;    [E] to interact&#10;" class="text" style="margin-right: 0; margin-left: 0; margin-top: 120px; margin-bottom: 0;" />
+    <ui:VisualElement name="Container" class="base-container" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Art/UI/Start_BG_4_Assetsheet/Wall.PNG?fileID=2800000&amp;guid=743d680edff931e46b950a3eae35e905&amp;type=3#Wall&quot;);">
+        <ui:Label text="Controls" name="Title" class="title" style="visibility: hidden;" />
+        <ui:Label class="text" style="margin-right: 0; margin-left: 0; margin-top: 0; margin-bottom: 0; background-image: url(&quot;project://database/Assets/Art/UI/temporary/controlscreditsscreens/Controls.png?fileID=-7113479977989563460&amp;guid=eebd8983ce97fcf46a831a11fc0d6c45&amp;type=3#Controls_0&quot;); width: 750px; height: 1000px; padding-left: 2px; position: absolute; top: 35px;" />
         <ui:VisualElement name="ButtonContainer" class="button-container" style="flex-grow: 1; justify-content: flex-end;">
-            <ui:Button text="Back&#10;" name="BackButton" class="button" />
+            <ui:Button name="BackButton" class="button" style="border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0; position: absolute;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
