implement gui art
implemented the art for the gui and made a backup of old gui incase something weird happens

--- a/Assets/UI Toolkit/StyleSheets/UI.uss
+++ b/Assets/UI Toolkit/StyleSheets/UI.uss
@@ -38,3 +38,18 @@
     transition-property: width;
     transition-duration: 0.2s;
 }
+
+.hourglass {
+    width: 320px;
+    height: 220px;
+    position: absolute;
+    right: -75px;
+}
+
+.healthbar {
+    width: 640px;
+    height: 440px;
+    position: absolute;
+    bottom: 1px;
+    left: -22px;
+}
